# Semantic-search-of-genes---Typer-integration

./: README.md  main.py  pyproject.toml  requirements.txt
